objects/MeterRead__mdt.object
<CustomObject>
    <fields>
        <fullName>Customer_Notification_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Notification Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERP_Callout_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ERP Callout Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <label>Organization Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Headquarter</fullName>
                    <default>true</default>
                    <label>Headquarter</label>
                </value>
                <value>
                    <fullName>Hanse Werke</fullName>
                </value>
                <value>
                    <fullName>Preussen Elektra</fullName>
                </value>
                <value>
                    <fullName>enviaM</fullName>
                </value>
                <value>
                    <fullName>Suwag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MeterRead</label>
    <pluralLabel>MeterRead</pluralLabel>
</CustomObject>